--- a/EventDelegation/index.css
+++ b/EventDelegation/index.css
@@ -6,11 +6,12 @@
 
 body{
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+  background: #1A5276;
 }
 
 #calculator{
@@ -18,10 +19,19 @@ body{
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 40vh;
+  height: 50vh;
   width: 60vw;
-  border: 2px solid;
-  background: #1A5276;;
+  border: 1px solid #124c71;
+  box-shadow: 2px 2px 1px 0px;
+  background: #1a5376af;
+}
+p{
+  color: #EEEFFF;
+}
+a{
+  text-decoration: none;
+  color: rgb(9, 9, 116);
+  filter: brightness(20);
 }
 
 #result{
